[package]
authors = ["Utkarsh Srivastava <utkarsh@sagacious.dev>"]
edition = "2018"
license = "Apache 2.0"
name = "hyperion"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-stream = "0.2"
futures-core = "0.3"
futures-util = "0.3"
prost = "0.8"
prost-types = "0.8.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-stream = "0.1"
tonic = "0.5"

wasmtime = "0.29.0"

[build-dependencies]
tonic-build = "0.5"
