[package]
authors = ["Utkarsh Srivastava <utkarsh@sagacious.dev>"]
edition = "2018"
license = "Apache 2.0"
name = "hyperion"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"

async-stream = "0.2"
env_logger = "0.9.0"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4.14"
nix = "0.23.0"
prost = "0.8"
prost-types = "0.8.0"
rand = "0.8.4"
reqwest = "0.11.6"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"]}
tokio-stream = "0.1"
tonic = "0.5"
uuid = {version = "0.8.2", features = ["v4"]}

[build-dependencies]
tonic-build = "0.5"
